Register agent if not exists